add farewell message

--- a/lib/views/index.ejs
+++ b/lib/views/index.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head lang="en">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -32,32 +32,60 @@
         <div class="col-md-1"></div>
         <div class="col-md-10 content-background">
             <div class="row">
-                <div id="indexHeader" class="text-center">
+                <div class="col-0 col-md-1"></div>
+                <div id="indexHeader" class="col-12 col-md-10 text-center">
                     <div class="row">
                         <div class="col-2 col-md-3"></div>
                         <div class="col-8 col-md-6">
-                            <img class="img-fluid main-logo" src="/images/rwab_white.png">
+                            <img class="img-fluid main-logo" src="/images/rwab_white.png" alt="logo">
                         </div>
                         <div class="col-2 col-md-3"></div>
                     </div>
                 </div>
+                <div class="col-0 col-md-1"></div>
             </div>
 
             <br/>
 
             <div class="row">
                 <div class="col-sm-12 col-md-12">
-                    <div class="row content-background">
-                        <!--START Summary Section-->
-                        <div class="col-sm-12 col-md-6 text-center">
-                            <p class="greeting-section">messsage</p>
+                    <div class="row">
+                        <div class="col-md-2"></div>
+                        <div class="col-sm-12 col-md-8">
+                            <p class="greeting-section">Red White & Brew is no longer operating at our Merchant Street location in Audubon.
+                                The choice to close was not an easy one and something we'd been struggling with for a while, but recent changes
+                                in our own lives and the craft beer market itself helped us reach this decision.</p>
+
+                            <p class="greeting-section">No matter what the future holds for RW&B, we can say with absolute certainty that the
+                                last seven years have been an incredible journey. The ups and downs of building a business—from the rush of opening,
+                                to navigating the panic of COVID-19, to the ongoing support from our community—have been equal parts exciting,
+                                terrifying, and humbling.</p>
+
+                            <p class="greeting-section">Sharing our passion for great beer and good times with our amazing local
+                                community has been a privilege. We’ve formed lifelong connections and learned more in the past seven
+                                years than we ever thought possible.</p>
+
+                            <p class="greeting-section">As relatively new fathers, one of our greatest joys has been watching life unfold in
+                                our taproom. Couples who once came here for a drink announced their engagements, hosted baby showers, and later
+                                returned with their little ones in tow. Seeing our space become a small part of so many family stories has
+                                been an unexpected and deeply rewarding experience.</p>
+
+                            <p class="greeting-section">As we focus on growing our families, it’s time for us to step back from the beer
+                                industry. We’re ready to turn our attention to our partners, our children, and the next chapters of our lives.</p>
+
+                            <p class="greeting-section">Will we miss sweating over a hot mash tun, hand-canning beer with a glorified
+                                homebrew seamer, or unloading pallets of malt without a forklift? Probably not. But we *will* miss
+                                catching up with friends and customers at the bar after a long shift and sharing glimpses into each other’s
+                                lives over a pint. Those memories are what we’ll cherish as we move forward.</p>
+
+                            <p class="greeting-section text-center">Thank you for being part of our journey. <br/> We hope to see
+                                you again, in some form or another, in the future.</p>
                         </div>
-                        <!--END Summary Section-->
+                        <div class="col-md-2"></div>
                     </div>
 
                     <br/>
 
-                    <!--START Facebook Widget Section-->
                     <div class="row">
                         <div class="col-md-12 center-block text-center">
                             <div class="fb-page" data-href="https://www.facebook.com/RedWhiteandBrewBeer"
@@ -71,9 +99,6 @@
                             </div>
                         </div>
                     </div>
-                    <!--END Facebook Widget Section-->
-
-
                 </div>
             </div>
             <hr/>
